update fixed columns not wrapping on about page

--- a/css/index.css
+++ b/css/index.css
@@ -525,7 +525,7 @@ header nav ul li a h2 {
   .wrapper-about {
     width: 100%;
     height: 100%;
-    flex-flow: column nowrap;
+    flex-flow: column wrap;
     justify-items: center;
   }
 }
