--- a/less/about-page.less
+++ b/less/about-page.less
@@ -13,7 +13,7 @@
   @media @tablet {
     width: 100%;
     height: 100%;
-    flex-flow: column nowrap;
+    flex-flow: column wrap;
     justify-items: center;
   }
 
